--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -10,7 +10,7 @@
             "RutaISO": "E:\\SanboxTest\\debian-10.8.0-amd64-xfce-CD-1.iso",
             "MemoriaRAM": {
                 "Tipo": "Static",
-                "Memoria": 2.0
+                "Memoria": 1.0
             },
             "Credenciales": {
                 "Usuario": "prueba",
@@ -23,10 +23,110 @@
                         "Tipo": "External",
                         "AdaptadorRed": "Ethernet"
                     },
-                    "Tipo": "DHCP",
-                    "Nombre": "Interfaz Salida"
+                    "Tipo": "Static",
+                    "Nombre": "miinterfaz",
+                    "IP": "192.168.0.69",
+                    "MascaraRed": "24",
+                    "Gateway": "192.168.0.1",
+                    "DNS": "8.8.8.8"
                 }
-            ]
+            ],
+            "Servicios": {
+                "AdministracionRemota": "SSH",
+                "PuertoSSH": "1234",
+                "ManejadorBD": {
+                    "Manejador": "MariaDB",
+                    "NombreBD":"MiBasecita"
+                },
+                "ServidorWeb": {
+                    "Servidor": "apache2",
+                    "Sitios": [
+                        {
+                        "Nombre": "sitio",
+                        "Dominio": "sitio.local",
+                        "Interfaz": "192.168.0.69",
+                        "Puerto": "80",
+                        "Protocolo": "http",
+                        "Drupal": false                },
+                                        {
+                        "Nombre": "sitio2",
+                        "Dominio": "sitio2.local",
+                        "Interfaz": "192.168.0.69",
+                        "Puerto": "80",
+                        "Protocolo": "http",
+                        "Drupal": true                },
+                                        {
+                        "Nombre": "sitio3",
+                        "Dominio": "sitio3.local",
+                        "Interfaz": "192.168.0.69",
+                        "Puerto": "443",
+                        "Protocolo": "https",
+                        "Drupal": false                },
+                                        {
+                        "Nombre": "sitio4",
+                        "Dominio": "sitio4.local",
+                        "Interfaz": "192.168.0.69",
+                        "Puerto": "443",
+                        "Protocolo": "https",
+                        "Drupal": true                }
+        
+                    ]
+                },
+                "DNS": [
+                    {
+                        "Tipo": "Forward",
+                        "Nombre": "ZonaUno",
+                        "Backup": "",
+                        "Registros": [
+                            {
+                                "Tipo": "A",
+                                "Hostname": "misitio.local",
+                                "IP": "10.23.1.2"
+                            },
+                            {
+                                "Tipo": "CNAME",
+                                "Alias": "alias",
+                                "FQDN": "misitio2.local"
+                            },
+                            {
+                                "Tipo": "MX",
+                                "ChildDomain": "misitio2.local",
+                                "FQDN": "prueba.misitio2.local"
+                            }
+                        ]
+                    },
+                        {
+                                "Tipo": "Reverse",
+                                "Nombre": "ZonaDos",
+                                "NetID": "12.11.13.0/24",
+                                "Registros": [
+                                    {
+                                        "Tipo": "PTR",
+                                        "Hostname": "misitioRegi.local",
+                                        "Host": "2"
+                                    },
+                                    {
+                                        "Tipo": "CNAME",
+                                        "Alias": "alias",
+                                        "FQDN": "misitio2.local"
+                                    }
+                                ]
+                            }
+                ],
+                "DHCP": [
+                    {
+                        "Rangos": [
+                            {
+                            "Inicio": "192.168.0.100",
+                            "Fin": "192.168.0.110"
+                            }
+                        ],
+                        "MascaraRed": "255.255.255.0",
+                        "Lease": "30000",
+                        "DNS": "8.8.8.8"
+                    }
+                ]
+            }
         }
     ]
 }
