--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -43,8 +43,8 @@ console-setup console-setup/charmap47 select UTF-8
 # Any hostname and domain names assigned from dhcp take precedence over
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
-d-i netcfg/get_hostname string {{hostname}} 
-d-i netcfg/get_domain string {{hostname}}
+#d-i netcfg/get_hostname string {{hostname}} 
+d-i netcfg/hostname string {{hostname}}
 
 # Disable that annoying WEP key dialog.
 d-i netcfg/wireless_wep string
@@ -218,19 +218,18 @@ d-i apt-setup/restricted boolean true
 d-i apt-setup/universe boolean true
 d-i apt-setup/non-free boolean true
 d-i apt-setup/contrib boolean true
-#d-i apt-setup/use_mirror boolean false
-d-i mirror/country string manual
-d-i mirror/http/hostname string http.us.debian.org
-d-i mirror/http/directory string /debian
-d-i mirror/http/proxy string
-
 d-i apt-setup/disable-cdrom-entries boolean true
 
 # You can choose to install non-free and contrib software.
 #d-i apt-setup/non-free boolean true
 #d-i apt-setup/contrib boolean true
 # Uncomment this if you don't want to use a network mirror.
-#d-i apt-setup/use_mirror boolean false
+d-i apt-setup/use_mirror boolean false
+#d-i apt-setup/use_mirror boolean true
+#d-i mirror/country string manual
+#d-i mirror/http/hostname string http.us.debian.org
+#d-i mirror/http/directory string /debian
+#d-i mirror/http/proxy string
 # Select which update services to use; define the mirrors to be used.
 # Values shown below are the normal defaults.
 #d-i apt-setup/services-select multiselect security, volatile
@@ -350,6 +349,12 @@ d-i finish-install/reboot_in_progress note
 #d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
 #d-i preseed/late_command string mkdir /tmp/post; mount /cdrom /tmp/post; in-target chmod +x /tmp/temp/post.sh; in-target /bin/bash /tmp/post/post.sh; in-target echo 'Done!' >> /home/prueba/acabe.txt
 d-i preseed/late_command string \
- in-target sh -c 'mkdir -p --mode=0755 /home/prueba/test && echo "finally, madafaka" > /home/prueba/test/ohshit.txt'; \
+ cp -r /cdrom/ServiciosLinux /target/servicios; \
  in-target sh -c 'usermod -p "!" root'; \
- in-target sh -c 'systemctl enable ssh';  
+ in-target sh -c 'echo "deb http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
+ in-target sh -c 'echo "deb-src http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
+ in-target sh -c 'apt-get update'; \
+ in-target sh -c 'apt-get install -y dos2unix'; \
+ in-target sh -c 'cd /servicios/'; \
+ in-target sh -c 'dos2unix ConfigurarServiciosLinux.sh'; \
+ in-target sh -c './ConfigurarServiciosLinux.sh'; 
